welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: value :: is not a member of java.awt.Color
    T=T::(getCouleurSol)
       ^